fix up searchbar and navbar wrapping and sizing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,3 +42,9 @@ h2.button.active {
     transition-duration: 200ms;
     z-index: 1;
 }
+
+@media (max-width: 430px) {
+    .navbar {
+        flex-direction: column;
+    }
+}
